fixed spacing of posts on user page

--- a/client/src/pages/UserPage/userpage.css
+++ b/client/src/pages/UserPage/userpage.css
@@ -130,10 +130,15 @@ th {
 }
 
 #my-posts-container {
-  width: 50rem;
-  height: 30rem;
+  width: 100%;
+  max-height: 100%;
   display: flex;
   justify-content: center;
+  flex-wrap: wrap;
+}
+
+#my-posts-container .card {
+  width: 40%;
 }
 
 .single-post {
@@ -180,4 +185,5 @@ th {
 #reservationsdiv {
   display: flex;
   justify-content: center;
+  flex-wrap: wrap;
 }
